small obj allocator

--- a/touhou8/touhou8.vcxproj.filters
+++ b/touhou8/touhou8.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\bg_stage0_opengl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="external\SmallObj.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
